- Collect and send span destination service timing statistics about the dropped spans to the apm-server. {pull}1132[#(1132)]
- Experimental support to compress short exit spans into a composite span. Disabled by default. {pull}1134[#(1134)]
- Discard exit spans shorter or equal than `ELASTIC_APM_EXIT_SPAN_MIN_DURATION`. Defaults to `1ms`. {pull}1138[#(1138)]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.14.0]]
==== 1.14.0 - 2021/09/22

- span: automatically infer `destination.service.resource` information when the span is an exit span and deprecate `destination.service.name` and `destination.service.type` {pull}1003[#(1003)]
- module/apmhttp: add apmhttp.WithClientSpanType ClientOption to set the span type of http client requests {pull}1106[#(1106)]
- module/apmazure: introduce instrumentation module for Azure blob, queue, and file storage {pull}1109[#(1109)]
- module/apmelasticsearch: propagete `Traceparent` and `Tracestate` headers to Elasticsearch {pull}1002[#(1002)]
- module/apmfiber: introduce instrumentation module for Fiber web framework {pull}999[#(999)]
- module/apmawssdkgo: fix a bug where the module would panic when an unsupported service is used {pull}1006[#(1006)]
- module/apmfasthttp: report the correct HTTP Status Code instead of always reporting `200` {pull}1104[#(1104)]

[[release-notes-1.13.1]]
==== 1.13.1 - 2021/08/05

- Fix concurrency bugs in breakdown metrics and module/apmhttp.WithClientTrace {pull}997[#(997)]

[[release-notes-1.13.0]]
==== 1.13.0 - 2021/07/28

- Prefer w3c traceparent header over legacy elastic-apm-traceparent {pull}963[#(963)]
- Context.SetUsername now takes precedence over HTTP user info from Context.SetHTTPRequest {pull}973[#(973)]
- module/apmhttp: fix a potential panic in WithClientTrace {pull}989[#(989)]
- add support for go-restful v3 {pull}968[#(968)]
- add fasthttp support {pull}957[#(957)]
- module/apmgin: support multiple routes using the same handler {pull}983[#(983)]