@@ -27,6 +27,7 @@ https://github.com/elastic/apm-agent-go/compare/v1.14.0...master[View commits]
 - Collect and send span destination service timing statistics about the dropped spans to the apm-server. {pull}1132[#(1132)]
 - Experimental support to compress short exit spans into a composite span. Disabled by default. {pull}1134[#(1134)]
 - Discard exit spans shorter or equal than `ELASTIC_APM_EXIT_SPAN_MIN_DURATION`. Defaults to `1ms`. {pull}1138[#(1138)]
+- module/apmprometheus: add support for mapping prometheus histograms. {pull}1145[#(1145)]
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
